--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -9,4 +9,4 @@ javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Browser Default do Sistema>
 javafx.run.inbrowser.path=
-user.properties.file=/home/upper/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\Escola\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
