--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.5-bin.jar=lib/mysql-connector-java-5.1.5-bin.jar
+file.reference.recurrence-11.6.4.jar=lib/recurrence-11.6.4.jar
+file.reference.view-11.10.1.jar=lib/view-11.10.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.5-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.5-bin.jar}:\
+    ${file.reference.recurrence-11.6.4.jar}:\
+    ${file.reference.view-11.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
